--- a/code/html/templates/row_template.html
+++ b/code/html/templates/row_template.html
@@ -1,4 +1,4 @@
-<div style="padding: 1em" id="button_1" class="row">
+<div style="padding: 1em" id="{{ prefix }}_message" class="row">
     <div class="col-md-6">
         <div class="form-group">
             <label for="{{ prefix }}_type">Type</label>
